[gd_scene load_steps=9 format=2]

[ext_resource path="res://Board/Board.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://bounce.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://SourceCodePro.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 45.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.5, 362.5 )

[node name="Board" type="Node"]
script = ExtResource( 1 )

[node name="Player1Score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Player2Score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 1267, 75 )
action = "move_up_player_1"

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 10, 75 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 428, 184 )

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 1 )
physics_material_override = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 640, -47 )
shape = SubResource( 1 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 125, 727 )
physics_material_override = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 514.5, 37.5 )
shape = SubResource( 1 )

[node name="LeftWall" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -43, 351.5 )
shape = SubResource( 2 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 1329, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( -5, 299 )
shape = SubResource( 2 )

[node name="BallStartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="LeftWall" to="." method="_on_LeftWall_body_entered"]
[connection signal="body_entered" from="RightWall" to="." method="_on_RightWall_body_entered"]
[connection signal="timeout" from="BallStartTimer" to="." method="_on_BallStartTimer_timeout"]
